--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Snittkalkulator</title>
 	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="icon" href="calculator.png">
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
@@ -14,12 +15,17 @@
 		<div id="left-side1">
 			<form id="karakterform" class="input-form">
 
-				<input type="text" name="karakter" class="inputfield" placeholder="Karakter">
-				<input type="text" name="karakter" class="inputfield" placeholder="Karakter">
-				<input type="text" name="karakter" class="inputfield" placeholder="Karakter">
-				<input type="text" name="karakter" class="inputfield" placeholder="Karakter">
-				<input type="text" name="karakter" class="inputfield" placeholder="Karakter">
-				<input type="text" name="karakter" class="inputfield" placeholder="Karakter">
+				<input type="text" name="karakter" class="inputfield" placeholder="Karakter" maxlength="1">
+				<input type="text" name="karakter" class="inputfield" placeholder="Karakter" maxlength="1">
+				<input type="text" name="karakter" class="inputfield" placeholder="Karakter" maxlength="1">
+				<input type="text" name="karakter" class="inputfield" placeholder="Karakter" maxlength="1">
+				<input type="text" name="karakter" class="inputfield" placeholder="Karakter" maxlength="1">
+				<input type="text" name="karakter" class="inputfield" placeholder="Karakter" maxlength="1">
+				<input type="text" name="karakter" class="inputfield" placeholder="Karakter" maxlength="1">
+				<input type="text" name="karakter" class="inputfield" placeholder="Karakter" maxlength="1">
+				<input type="text" name="karakter" class="inputfield" placeholder="Karakter" maxlength="1">
+				<input type="text" name="karakter" class="inputfield" placeholder="Karakter" maxlength="1">
+				
 			</form>
 			<button type="button" id="sumButton" onclick="sum()">
 				Regn ut!
@@ -32,11 +38,13 @@
 
 	</div>
 
-
-
 	<div id="right-side">
 		<div id="right-side1">
 			<form id="studiepoengform" class="input-form">
+				<input type="number" name="studiepoeng" class="inputfield" placeholder="Studiepoeng">
+				<input type="number" name="studiepoeng" class="inputfield" placeholder="Studiepoeng">
+				<input type="number" name="studiepoeng" class="inputfield" placeholder="Studiepoeng">
+				<input type="number" name="studiepoeng" class="inputfield" placeholder="Studiepoeng">
 				<input type="number" name="studiepoeng" class="inputfield" placeholder="Studiepoeng">
 				<input type="number" name="studiepoeng" class="inputfield" placeholder="Studiepoeng">
 				<input type="number" name="studiepoeng" class="inputfield" placeholder="Studiepoeng">
@@ -51,7 +59,6 @@
 	
 		<div id="right-side2">
 			<h1 id="sum">Kommer du inn på master i Informasjonsvitenskap? </h1>
-			<p id="tekst"> Spennende.. </p>
 		</div>
 	</div>
 </div>
